Updated the form

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <link rel="stylesheet" type="text/css" href="css/custom_styles.css" />
     <link rel="stylesheet" type="text/css" href="css/jquery-ui.min.css" />
 
-    <title>William & Michelle Wedding 2019</title>
+    <title>Michelle & William Wedding 2019</title>
 </head>
 
 <body data-spy="scroll" data-target="#headerNavbar" data-offset="50">
@@ -70,7 +70,7 @@
     <!-- Main section with time counter (Home) -->
     <section id="home" class="home">
         <aside class="home_frame">
-            <h1 class="home_h1">William <span class="home_nonfancyfont_h1_block"><span class="home_nonfancyfont_h1">and</span></span> Michelle</h1>
+            <h1 class="home_h1">Michelle <span class="home_nonfancyfont_h1_block"><span class="home_nonfancyfont_h1">and</span></span> William</h1>
             <br /><br />
             <h2 class="home_h2">We are getting married!</h2>
             <br /><br />
@@ -82,9 +82,9 @@
     <section id="info" class="info">
         <aside class="info_frame">
             <h1 class="info_fancyfont">Message for You</h1>
-            <p><span class="no-widow">William and</span>  Michelle kindly invites you to join in celebrating this joyful moment of their lives. Don’t forget to RSVP and let us know about any dietary preferences too. Thanks so much for all of your love and support so far! We can’t wait to celebrate this special day with all of our favourite people.<span class="no-widow"></span></p>
+            <p><span class="no-widow">Michelle and</span>  William kindly invite you to join in celebrating this joyful moment of their lives. Don’t forget to RSVP and let us know about any dietary preferences too. Thanks so much for all of your love and support so far! We can’t wait to celebrate this special day with all of our favourite people.<span class="no-widow"></span></p>
             <hr />
-            <h2 class="info_weddingdate">July 12, 2019 at 9:00am</h2>
+            <h2 class="info_weddingdate">July 12, 2019 at 9:30am</h2>
             
         </aside>
     </section>
@@ -93,45 +93,15 @@
     <section id="crew" class="crew">
         <h1 class="crew_fancyfont">Meet the Crew</h1>
         <div class="d-flex flex-row justify-content-between flex-wrap">
-            <figure class="figure flex-item">
-                <img class="figure-img" src="images/crew1.jpg" alt="best man" />
-                <figcaption>
-                    <h2>William Wong</h2>
-                    <p><em>Groom</em></p>
-                </figcaption>
-                <details>
-                    <summary>
-                        <p><span class="no-widow">Read up</span> on <span class="no-widow">William Wong</span></p>
-                    </summary>
-                    <p><span class="no-widow">I have</span> known Paulo since out high school days at Francis
-                        Libermann. We
-                        did not really know each other till grade 11 computer <span class="no-widow">science class.</span></p>
-                </details>
-            </figure>
-            <figure class="figure flex-item">
-                <img class="figure-img" src="images/crew1.jpg" alt="best man" />
-                <figcaption>
-                    <h2>Michelle San Luis</h2>
-                    <p><em>Bride</em></p>
-                </figcaption>
-                <details>
-                    <summary>
-                        <p><span class="no-widow">Read up</span> on <span class="no-widow">Michelle San Luis</span></p>
-                    </summary>
-                    <p><span class="no-widow">I have</span> known Paulo since out high school days at Francis
-                        Libermann. We
-                        did not really know each other till grade 11 computer <span class="no-widow">science class.</span></p>
-                </details>
-            </figure>
             <figure class="figure p-3 flex-item">
                 <img class="figure-img" src="images/crew1.jpg" alt="best man" />
                 <figcaption>
-                    <h2>Paulo Aquino</h2>
-                    <p><em>Best man</em></p>
+                    <h2>Michelle San Luis & William Wong</h2>
+                    <p><em>Bride & Groom</em></p>
                 </figcaption>
                 <details>
                     <summary>
-                        <p><span class="no-widow">Read up</span> on <span class="no-widow">Paulo Aquino</span></p>
+                        <p><span class="no-widow">Read up</span> on <span class="no-widow">Michelle & William</span></p>
                     </summary>
                     <p><span class="no-widow">I have</span> known Paulo since out high school days at Francis
                         Libermann. We
@@ -157,6 +127,36 @@
             <figure class="figure p-3 flex-item">
                 <img class="figure-img" src="images/crew1.jpg" alt="best man" />
                 <figcaption>
+                    <h2>Paulo Aquino</h2>
+                    <p><em>Best man</em></p>
+                </figcaption>
+                <details>
+                    <summary>
+                        <p><span class="no-widow">Read up</span> on <span class="no-widow">Paulo Aquino</span></p>
+                    </summary>
+                    <p><span class="no-widow">I have</span> known Paulo since out high school days at Francis
+                        Libermann. We
+                        did not really know each other till grade 11 computer <span class="no-widow">science class.</span></p>
+                </details>
+            </figure>
+            <figure class="figure p-3 flex-item">
+                <img class="figure-img" src="images/crew1.jpg" alt="best man" />
+                <figcaption>
+                    <h2>Charlene Lopez</h2>
+                    <p><em>Bridesmaid</em></p>
+                </figcaption>
+                <details>
+                    <summary>
+                        <p><span class="no-widow">Read up</span> on <span class="no-widow">Jamielyn Camposano</span></p>
+                    </summary>
+                    <p><span class="no-widow">I have</span> known Paulo since out high school days at Francis
+                        Libermann. We
+                        did not really know each other till grade 11 computer <span class="no-widow">science class.</span></p>
+                </details>
+            </figure>
+            <figure class="figure p-3 flex-item">
+                <img class="figure-img" src="images/crew1.jpg" alt="best man" />
+                <figcaption>
                     <h2>John Clemente</h2>
                     <p><em>Groomsman</em></p>
                 </figcaption>
@@ -172,7 +172,7 @@
             <figure class="figure p-3 flex-item">
                 <img class="figure-img" src="images/crew1.jpg" alt="best man" />
                 <figcaption>
-                    <h2>Charlene Lopez</h2>
+                    <h2>Koulla Martin</h2>
                     <p><em>Bridesmaid</em></p>
                 </figcaption>
                 <details>
@@ -202,12 +202,12 @@
             <figure class="figure p-3 flex-item">
                 <img class="figure-img" src="images/crew1.jpg" alt="best man" />
                 <figcaption>
-                    <h2>Koulla Martin</h2>
+                    <h2>Megan MacDonald</h2>
                     <p><em>Bridesmaid</em></p>
                 </figcaption>
                 <details>
                     <summary>
-                        <p><span class="no-widow">Read up</span> on <span class="no-widow">Jamielyn Camposano</span></p>
+                        <p><span class="no-widow">Read up</span> on <span class="no-widow">Megan MacDonald</span></p>
                     </summary>
                     <p><span class="no-widow">I have</span> known Paulo since out high school days at Francis
                         Libermann. We
@@ -232,16 +232,14 @@
             <figure class="figure p-3 flex-item">
                 <img class="figure-img" src="images/crew1.jpg" alt="best man" />
                 <figcaption>
-                    <h2>Megan MacDonald</h2>
-                    <p><em>Bridesmaid</em></p>
+                    <h2><span class="no-widow">Miley Anne</span> <span class="no-widow">San Luis</span></h2>
+                    <p><em>Flowergirl</em></p>
                 </figcaption>
                 <details>
                     <summary>
-                        <p><span class="no-widow">Read up</span> on <span class="no-widow">Megan MacDonald</span></p>
+                        <p><span class="no-widow">Read up</span> on Miley Ann <span class="no-widow">San Luis</span></p>
                     </summary>
-                    <p><span class="no-widow">I have</span> known Paulo since out high school days at Francis
-                        Libermann. We
-                        did not really know each other till grade 11 computer <span class="no-widow">science class.</span></p>
+                    <p><span class="no-widow">Miley is</span> the niece of the bride. She loves drawing, swimming and <span class="no-widow">designing houses.</span></p>
                 </details>
             </figure>
             <figure class="figure p-3 flex-item">
@@ -253,21 +251,6 @@
                 <details>
                     <summary>
                         <p><span class="no-widow">Read up</span> on <span class="no-widow">Adamn Aquino</span></p>
-                    </summary>
-                    <p><span class="no-widow">I have</span> known Paulo since out high school days at Francis
-                        Libermann. We
-                        did not really know each other till grade 11 computer <span class="no-widow">science class.</span></p>
-                </details>
-            </figure>
-            <figure class="figure p-3 flex-item">
-                <img class="figure-img" src="images/crew1.jpg" alt="best man" />
-                <figcaption>
-                    <h2><span class="no-widow">Miley Anne</span> <span class="no-widow">San Luis</span></h2>
-                    <p><em>Flowergirl</em></p>
-                </figcaption>
-                <details>
-                    <summary>
-                        <p><span class="no-widow">Read up</span> on Miley Ann <span class="no-widow">San Luis</span></p>
                     </summary>
                     <p><span class="no-widow">I have</span> known Paulo since out high school days at Francis
                         Libermann. We
@@ -325,34 +308,59 @@
 
     <!-- RSVP section -->
     <section id="rsvp" class="rsvp">
-        <h1 class="rsvp_fancyfont">R.S.V.P.</h1>
-        <p><span class="no-widow"><span class="text-danger">*</span> are</span> <span class="no-widow">required fields.</span></p>
-        <form>
-            <div class="form-group">
-                <label for="selectTitle">Title</label> <span class="text-danger">*</span>
-                <select class="form-control" id="selectTitle">
-                    <option selected>Please pick one</option>
-                    <option value="Mr. Awesome">Mr. Awesome...</option>
-                    <option value="Mrs. Sexy">Mrs. Sexy...</option>
-                    <option value="Miss Single, ready to mingle">Miss. Single, ready to mingle...</option>
-                </select>
-            </div>
+        <aside class="rsvp_frame">
+            <h1 class="rsvp_fancyfont">R.S.V.P.</h1>
+            <p><span class="no-widow"><span class="text-danger">*</span> are</span> <span class="no-widow">required fields.</span></p>
+            <form action="" method="">
+                <div class="form-group">
+                    <label for="selectTitle">Title</label> <span class="text-danger">*</span>
+                    <select class="form-control" id="selectTitle">
+                        <option selected>Please pick one</option>
+                        <option value="Mr. Awesome">Mr. Awesome...</option>
+                        <option value="Mrs. Sexy">Mrs. Sexy...</option>
+                        <option value="Miss Single, ready to mingle">Miss. Single, ready to mingle...</option>
+                    </select>
+                </div>
 
-            <div class="form-group">
-                <label for="inputFirstName">First Name</label> <span class="text-danger">*</span>
-                <input type="text" class="form-control" id="inputFirstName" placeholder="Enter your first name">
-            </div>
+                <div class="form-group">
+                    <label for="inputFirstName">First Name</label> <span class="text-danger">*</span>
+                    <input type="text" class="form-control" id="inputFirstName" placeholder="Enter your first name">
+                </div>
 
-            <div class="form-group">
-                <label for="inputFirstName">Last Name</label> <span class="text-danger">*</span>
-                <input type="text" class="form-control" id="inputLastName" placeholder="Enter your last name">
-            </div>
+                <div class="form-group">
+                    <label for="inputLastName">Last Name</label> <span class="text-danger">*</span>
+                    <input type="text" class="form-control" id="inputLastName" placeholder="Enter your last name">
+                </div>
 
-            <div class="form-group">
-                <label for="inputFirstName">Email Address</label> <span class="text-danger">*</span>
-                <input type="email" class="form-control" id="inputEmailAdress" placeholder="Enter your email address">
-            </div>
-        </form>
+                <div class="form-group">
+                    <label for="inputFirstName">Email Address</label> <span class="text-danger">*</span>
+                    <input type="email" class="form-control" id="inputEmailAdress" placeholder="Enter your email address">
+                </div>
+
+                <!-- Nav tabs -->
+                <div class="form-group">
+                    <label for="tabsYesNo">RSVP</label> <span class="text-danger">*</span>
+                    <ul class="nav nav-tabs" role="tablist" id="tabsYesNo">
+                        <li class="nav-item">
+                            <a id="rsvpYes" class="nav-link active" href="#displayYes" role="tab" data-toggle="tab">Yes</a>
+                        </li>
+                        <li class="nav-item">
+                            <a id="rsvpNo" class="nav-link" href="#displayNo" role="tab" data-toggle="tab">No</a>
+                        </li>
+                    </ul>
+                    <div class="tab-content">
+                        <div id="displayYes" class="tab-pane active">
+                            <h2>Yes</h2>
+                            <p>You said yes</p>
+                        </div>
+                        <div id="displayNo" class="tab-pane fade">
+                            <h2>No</h2>
+                            <p>You said no</p>
+                        </div>
+                    </div>
+                </div>
+            </form>
+        </aside>
     </section>
 
     <!-- Footer -->
